<?xml version="1.0"?>
<package>
  <name>rhoban_team_play</name>
  <version>0.0.0</version>
  <description>
    Rhoban Team Play core
  </description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="lhofer@labri.fr">Ludovic Hofer</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils.git -->
  <build_depend>hl_communication</build_depend> <!-- rhoban/hl_communication.git -->

  <run_depend>rhoban_utils</run_depend>
  <run_depend>hl_communication</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>

